Closed Bug 402600 Opened 18 years ago Closed 18 years ago

Firefox should take children into account when setting MSAA invisible state on elements with size 0x0

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: simon.bates, Assigned: aaronlev)

Details

Attachments

(2 files)

Firefox sets the MSAA invisible state on elements with computed width and height of 0x0 even if they have visible children. For example a div with only absolutely positioned children will have a size of 0x0 even though its children are visible. To reproduce: 1. start the Microsoft Inspect tool 1. open the attached invisible_slider.html 1. tab to the #container div (box will turn blue) Expect: Inspect not to report State: invisible Actual: Inspect reports State: invisible
Attached file invisible_slider.html
Attachment #287449 - Attachment description: testcase → invisible_slider.html
Attachment #287489 - Flags: review?(ginn.chen) → review+
Attachment #287489 - Flags: approval1.9?
Attachment #287489 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: