Bug 402600. Don't mark 0x0 objects as invisible when they are absolutely positioned and have children. r=ginn.chen, a=dsicore